    - Fix type problems in partition edit dialogue

  [ Evan Dandrea ]
  * Automatic update of included source packages: migration-assistant
    0.4.1, partman-auto 62ubuntu6, partman-base 100ubuntu6.
  * Handle spaces in usernames in migration-assistant. (LP: #89009)
  * Fixed list movement bugs on the Migration page.  Also, selecting an
    item now selects the user as well.  (LP: #89414)

 -- Evan Dandrea <evand@ubuntu.com>  Sun,  4 Mar 2007 12:16:46 -0500

ubiquity (1.3.23) feisty; urgency=low

  * Enable migration-assistant by default. Replace --migration-assistant
    option with --no-migration-assistant.
  * Add a console-setup-apply script rather than hacking console-setup's
    post-base-installer script (which is being renamed and changed in ways
    that aren't appropriate for ubiquity).
  * Make sure we never try to remove the kernel package corresponding to the
    running kernel (LP: #86427).
  * Automatic update of included source packages: base-installer
    1.70ubuntu5, hw-detect 1.45ubuntu2, partman-base 100ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 28 Feb 2007 14:16:58 +0000

ubiquity (1.3.22) feisty; urgency=low

  [ Colin Watson ]
  * New partitioner:
    - Fix edit dialog not to try to resize partitions even if the resize
      spinbutton was left untouched (LP: #85227).
    - Add contextual buttons to GTK frontend (part of LP: #83166).
    - Add an undo facility.
    - partman-* updates add validation support (LP: #82768); also add
      XFS-on-/boot validation.
    - Break out of setting the mountpoint if it's invalid (LP: #84543).
  * Fix crash if multiple newworld boot partitions are present (LP: #84429).
  * GTK frontend:
    - Fix backup from user information page if migration-assistant is not
      active (LP: #85642).
    - Fix up step numbers if migration-assistant is disabled (LP: #85711).
    - Disable smooth zooming, as some video drivers are very slow at drawing