@@ -10,8 +10,10 @@ ubiquity (1.3.24) UNRELEASED; urgency=low
   * Handle spaces in usernames in migration-assistant. (LP: #89009)
   * Fixed list movement bugs on the Migration page.  Also, selecting an
     item now selects the user as well.  (LP: #89414)
+  * The Migration page now auto-fills the username box, matching the
+    behavior on the User Setup page. (LP: #89522)
 
- -- Evan Dandrea <evand@ubuntu.com>  Sun,  4 Mar 2007 12:16:46 -0500
+ -- Evan Dandrea <evand@ubuntu.com>  Sun,  4 Mar 2007 14:12:28 -0500
 
 ubiquity (1.3.23) feisty; urgency=low
 
